--- a/style.css
+++ b/style.css
@@ -1,57 +1,155 @@
-.text-blok {
-    background-color: rgb(227, 227, 233);
-    font-size: 12px;
-    border: solid 1px;
-    font-family: Arial, Futura, sans-serif;
-    /* text-align: center; */
+#header {height: 50px;
+    width: auto;
+    background-color: green;
+    opacity: 1.0;
+    margin-top: -10px;
+    margin-left: -10px;
+    margin-right: -10px;}
+    #left {height: 50px;
+    width: 40%;
+    background-color: rgb(255, 213, 65);
+    opacity: 1.0;
+    float: left;}
+    #right {height: 50px;
+    width: 60%;
+    background-color: rgb(255, 213, 65);
+    opacity: 1.0;
+    float: left;}
+    
+    
+    #leftbody{height: 900px;
+    width: 15%;
+    background-color: red;
+    opacity: 0;
+    float: left;}
+    #midlebody{height: auto;
+    width: 70%;
+    background-color: white;
+    opacity: 1.0;
+    float: left;}
+    #rightbody{height: 800px;
+    width: 15%;
+    background-color: yellow;
+    opacity: 0;
+    float: left;}
+    
+    #footer{
+      height: 75px;
+    width: 101%;
+    margin-left: -10px;
+    margin-right: -15px;
+    background-color: rgb(255, 213, 65);
+    opacity: 1.0;
+    float: left;
     }
-
-.bold {font-weight: bold;}
-.left {text-align: left;}
-.center {text-align: center;}
-.right {text-align: right;}
-
-.container-1 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.container-1 div {
-    padding: 1px;
-    /* border: 1px solid silver; */
-}
-.container-2 {
-    display: flex;
-    flex-direction: column;
-}
-
-.container-2 {
-    display: flex;
-    flex-direction: column;
-}
-.container-2 div{
-    padding: 1px;
-    border: 1px solid silver; 
-}
-.box-1 {flex: auto;
-    /* border: 1px solid silver; */
-
-}
-.box-2 {flex: auto;
-
-}
-
-
-#osn{
-    height: 5px;
-width: 100%;
-background-color: rgba(147, 142, 172, 1);
-/* margin-top: -10px;
-margin-left: -10px;
-margin-right: -7px; */
-/* padding-top: 45px;
-padding-left: 73px;
-padding-bottom: 35px; */
-
-}
+    #footer1{
+    height: 75px;
+    width: auto;
+    background-color: rgb(255, 213, 65);
+    opacity: 1.0;
+    float: left;
+    }
+    #footer2{
+    height: 70px;
+    width: 10%;
+    background-color: rgb(255, 213, 65);
+    opacity: 1.0;
+    float: right;
+    }
+    #footer3{
+    height: 70px;
+    width: 10%;
+    background-color: rgb(255, 213, 65);
+    opacity: 1.0;
+    float: right;
+    padding-top: 5px;
+    }
+    
+    #block1{height: 200px;
+    width: 47%;
+    background-color: white;
+    opacity: 1;
+    float: left;
+    padding-right: 10px;}
+    #block11{height: 200px;
+    width: 47%;
+    background-color: white;
+    opacity: 1;
+    float: left;
+    padding-left: -10px;}
+    #block2{height: 200px;
+    width: 47%;
+    background-color: white;
+    opacity: 1;
+    float: right;
+    padding-left: -10px;}
+    #block3{height: 100px;
+      margin: 4px;
+      margin-top: 51px;
+    width: 0.45%;
+    background-color: rgb(255, 213, 65);
+    opacity: 1;
+    float: left;
+    padding-left: -10px;
+    border-radius: 50px 50px 50px 50px;}
+    #block4{height: 8px;
+    width: 70%;
+    margin-left: 15%;
+    background-color: rgb(255, 213, 65);
+    opacity: 1;
+    float: left;
+    padding-left: -10px;
+    border-radius: 50px 50px 50px 50px;}
+    #block5{height: 200px;
+    width: 100%;
+    background-color: white;
+    opacity: 1;
+    float: left;
+    padding-right: 10px;}
+    #block6{height: 170px;
+    width: 100%;
+    background-color: white;
+    opacity: 1;
+    float: left;
+    padding-right: 10px;
+      padding-top: 10px;
+    }
+    
+    #blocklogo{height: 400px;
+    width: 100%;
+    padding-top: 40px;
+    padding-bottom: -50px;}
+    
+    .box-1 {
+      flex: auto;
+      float: right;
+      width: 13%;
+    }
+    .box-1:hover {
+      flex: auto;
+      float: right;
+      width: 13%;
+      background-color: rgb(241, 191, 15)
+    }
+    
+    
+    h3{font-family: 'Lato', sans-serif;
+    text-align: center;
+    font-size: 16px;
+    color: #000000;}
+    h1{font-family: 'Lato', sans-serif;
+    text-align: center;
+    font-size: 30px;
+    color: #000000;}
+    p{font-family: 'Lato', sans-serif;
+    text-align: left;
+    font-size: 15px;
+    color: #000000;}
+    p1{font-family: 'Lato', sans-serif;
+    text-align: left;
+    font-size: 10px;
+    color: #000000;}
+    p2{font-family: 'Lato', sans-serif;
+    text-align: right;
+    font-size: 10px;
+    color: #000000;}
