docs: added the year and the name of the course

--- a/style.css
+++ b/style.css
@@ -64,6 +64,14 @@
     float: right;
     padding-top: 5px;
     }
+    #footer4{
+        height: 70px;
+        width: 20%;
+        background-color: rgb(255, 213, 65);
+        opacity: 1.0;
+        float: left;
+        padding-top: 5px;
+        }
     
     #block1{height: 200px;
     width: 47%;
@@ -153,3 +161,7 @@
     text-align: right;
     font-size: 10px;
     color: #000000;}
+    p5{font-family: 'Lato', sans-serif;
+        text-align: left;
+        font-size: 15px;
+        color: #000000;}
